--- a/sTranslate.Tools/sTranslate.Tools.csproj
+++ b/sTranslate.Tools/sTranslate.Tools.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{F1E15F4D-8CD2-4EF6-926E-B945D9BC4297}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>sTranslate</RootNamespace>
-    <AssemblyName>sTranslate</AssemblyName>
+    <RootNamespace>sTranslate.Tools</RootNamespace>
+    <AssemblyName>sTranslate.Tools</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,7 +30,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -43,6 +50,16 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XltEnums.cs" />
     <Compile Include="XltTool.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\sTranslate.Model\sTranslate.Model.csproj">
+      <Project>{93696ab8-7810-4c59-ab96-dcb967c0e2d2}</Project>
+      <Name>sTranslate.Model</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
