--- a/sTranslate.TestApp/App.config
+++ b/sTranslate.TestApp/App.config
@@ -1,10 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="TranslationEntities" connectionString="metadata=res://*/TranslationModel.csdl|res://*/TranslationModel.ssdl|res://*/TranslationModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=JENS-HP1\JENSSQL1;initial catalog=sTranslate;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="TranslationEntities" connectionString="metadata=res://*/TranslationModel.csdl|res://*/TranslationModel.ssdl|res://*/TranslationModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MICKE_LAPTOP\SQLEXPRESS;initial catalog=sTranslate;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
